[package]
name = "phazer"
version = "0.2.0"
authors = ["Brian Cook (a.k.a Coding-Badly)"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
repository = "https://github.com/Coding-Badly/phazer"
documentation = "https://docs.rs/phazer"
# homepage = "https://phazer.github.io/book"
description = """
Two-phase commit for file creation.
"""
keywords = ["file", "utility", "windows", "linux", "unix"]
categories = ["algorithms", "concurrency", "config", "filesystem"]
edition = "2021"
# rust-version = "1.56"
# include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]

[dependencies]
tokio = { version = "1", features = ["fs"], optional = true }

[dev-dependencies]
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
reqwest = { version = "0.12.4", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2.5.0" }
windows-sys = { version = "0.52.0", features = ["Win32_Storage_FileSystem"] }

[features]
default = []
simple = []
test_helpers = []

# Taken from a stackoverflow post that took it from tokio.
[package.metadata.docs.rs]
all-features = true
#rustdoc-args = ["--cfg", "docsrs"]
